2008-08-21  Sergey Poznyakoff  <gray@gnu.org.ua>

	Rewrite IMAP namespace support.
	* imap4d/imap4d.c (imap4d_cfg_param): other-namespace and
	shared-namespace take proper lists as arguments.
	(imap4d_session_setup0): Call namespace_init_session.
	(main): Call namespace_init.
	* imap4d/imap4d.h (set_namespace): Remove.
	(namespace_init): Change proto.
	(namespace_init_session): New prototype.
	(namespace): New declaration.
	* imap4d/namespace.c: Rewrite using lists.
	* mailbox/cfg_parser.y (parse_param): Cast string to lists if
	the parameter has list type.

2008-08-20  Sergey Poznyakoff  <gray@gnu.org.ua>

	Implement ID extension.
	* imap4d/id.c: New file.
	* imap4d/Makefile.am (imap4d_SOURCES): Add id.c, remove version.c.
	* imap4d/commands.c: Add ID command.
	Remove X-VERSION command.
	(SELECT,EXAMINE): Switch to authenticated mode on failure.
	* imap4d/imap4d.c (imap4d_argc, imap4d_argv): New variables.
	(imap4d_cfg_param): New keyword `id-fields'.
	(main): Save command line arguments.
	* imap4d/imap4d.h (imap4d_argc, imap4d_argv): New declarations.
	* imap4d/select.c (imap4d_select0): Do not reset state to auth on
	failure, this is done by util_finish.
	* imap4d/version.c: Remove.
	* imap4d/capability.c: Announce ID capability, remove X-VERSION.
	* imap4d/testsuite/imap4d/x.exp: Use ID instead of X-VERSION.
	
	* TODO, NEWS: Update.
	
	* mailbox/cfg_parser.y (_set_fun,parse_param): Bugfix.
	
2008-08-19  Sergey Poznyakoff  <gray@gnu.org.ua>

	Bugfixes.
	
	* libcfg/acl.c (parsearg): Initialize size.
	* mailbox/cfg_driver.c (mu_cfg_assert_value_type): Bugfix.
	* mailbox/cfg_lexer.l (mu_get_config): Close file.
	* mailbox/cfg_parser.y: Fix array creation.
	
	Change configuration file parser based on the lexer/parser from
	GNU Dico.
	
	* auth/gsasl.c: Remove deprecated data types.
	* imap4d/auth_gsasl.c (retrieve_password): Minor fix.

	* imap4d/imap4d.c, imap4d/imap4d.h, imap4d/namespace.c,
	lib/tcpwrap.c, libcfg/acl.c, libcfg/auth.c, libcfg/common.c,